# crazyflie_ros

./: .gitmodules
crazyflie_controller/: CMakeLists.txt  package.xml
crazyflie_controller/action/: ExecuteTrajectory.action
crazyflie_controller/config/: crazyflie2.yaml
crazyflie_controller/launch/: crazyflie2.launch
crazyflie_controller/msg/: QuadcopterTrajectory.msg  QuadcopterTrajectoryPoint.msg  QuadcopterTrajectoryPoly.msg
crazyflie_controller/src/: controller.cpp
crazyflie_cpp/: CMakeLists.txt
crazyflie_cpp/include/crazyflie_cpp/: Crazyflie.h  Crazyradio.h  ITransport.h  crtp.h
crazyflie_cpp/src/: Crazyflie.cpp  Crazyradio.cpp  crtp.cpp  num.c  num.h
crazyflie_demo/launch/: cf1.yaml  cf2.yaml  hover_vicon.launch  hover_vicon_custom_tracker.launch  multi_hover_vicon_custom_tracker.launch  tilthex0.launch
crazyflie_demo/scripts/: 8.csv  8_discrete.csv  8_discrete_0.8.csv  circle.csv  controller.py  executeTrajectory.py  fully_actuated.py  importfile.m  logdata.csv  plot_step_response.m  testRollNegative.txt  testRollPositive.txt  thrust.txt  thrust_vis.py  tilthex_motor_test.py  trajectory1.csv  trajectory2.csv  upload_trajectory.py
crazyflie_driver/: CMakeLists.txt  package.xml
crazyflie_driver/launch/: crazyflie_add.launch
crazyflie_driver/msg/: QuadcopterTrajectoryPoint.msg  QuadcopterTrajectoryPoly.msg
crazyflie_driver/src/: crazyflie_add.cpp  crazyflie_server.cpp
crazyflie_driver/srv/: AddCrazyflie.srv  AvoidTarget.srv  Hover.srv  Land.srv  SetEllipse.srv  SetGroup.srv  StartCannedTrajectory.srv  UpdateParams.srv  UploadTrajectory.srv
crazyflie_manager/: CMakeLists.txt  package.xml
crazyflie_manager/launch/: hover_vicon.launch
crazyflie_manager/scripts/: enablePosCtrl.py
crazyflie_manager/src/: manager.cpp
crazyflie_tools/: CMakeLists.txt
crazyflie_tools/src/: battery.cpp  broadcast_test.cpp  packetDropTest.cpp  queryCtrlStats.cpp  queryIMU.cpp  queryPacketDrops.cpp  reboot.cpp  setChannel.cpp
