<?xml version="1.0"?>
<package>
  <name>crazyflie_manager</name>
  <version>0.0.1</version>
  <description>Mangages a swarm of Crazyflies.</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/crazyflie</url>
  <url type="bugtracker">https://github.com/whoenig/crazyflie_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
</package>
